Fixed layout problems in stock list

--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -20,6 +20,8 @@
     margin-bottom: 20px;
 }
 
+
+
 .form-group {
     margin-bottom: 15px;
 }
@@ -461,7 +463,7 @@ input.GraphType{
     /*! height: ; */
 }
 button.selectedStock{
-    background-color: #e1dede;
+    background-color: #d9d9d9;
     color: black;
     width: 100%;
     font-size: 20px;
@@ -470,6 +472,9 @@ button.selectedStock{
     text-align: left;
     border: none;
     border-bottom: 2px solid #e4e4e4;
+}
+button.selectedStock:hover{
+    background-color: #bebebe;
 }
 button.unSelectedStock{
     background-color: #fff;
@@ -481,8 +486,11 @@ button.unSelectedStock{
     text-align: left;
     padding-left: 15px;
 }
+button.unSelectedStock:hover{
+    background-color: #e4e4e4;
+}
 button.stockCrossButton{
-    background-color: red;
+    background-color: #ffffff;
     color:white;
 }
 button.StockSubmitButton{
